--- a/sass/components/_player.scss
+++ b/sass/components/_player.scss
@@ -36,68 +36,69 @@
 			align-items: center;
 		}
 	}
-}
 
-.album {
-	position: relative;
-	height: 100%;
-	display: flex;
-
-	&__link {
-		vertical-align: middle;
-
-		&--artwork {
-			height: 5.5rem;
-		    width: 5.5rem;
-			margin-right: 1.5rem;
-			background-size: cover;
-		}
-	}
-
-	&__info {
+	&__album {
+		position: relative;
+		height: 100%;
 		display: flex;
-		flex-direction: column;
-		justify-content: center;
 
-		&--track {
+		&__link {
+			vertical-align: middle;
+
+			&--artwork {
+				height: 5.5rem;
+				width: 5.5rem;
+				margin-right: 1.5rem;
+				background-size: cover;
+			}
+		}
+
+		&__info {
 			display: flex;
-			align-items: center;
-			margin-bottom: .5rem;
+			flex-direction: column;
+			justify-content: center;
 
-			&-name {
-				font-size: 1.2rem;
+			&--track {
+				display: flex;
+				align-items: center;
+				margin-bottom: .5rem;
+
+				&-name {
+					font-size: 1.2rem;
+
+					&:hover {
+						cursor: pointer;
+						text-decoration: underline;
+					}
+				}
+
+				&-icon {
+					margin-left: 1.5rem;
+					height: 2rem;
+					width: 2rem;
+					fill: $color-white;
+
+					&:hover {
+						// color: $color-white;
+						fill: $color-green;
+					}
+				}
+			}
+
+			&--artist-name {
+				display: inline-block;
+				color: $color-grey;
 
 				&:hover {
+					color: $color-white;
 					cursor: pointer;
 					text-decoration: underline;
 				}
 			}
-
-			&-icon {
-				margin-left: 1.5rem;
-				height: 2rem;
-				width: 2rem;
-				fill: $color-white;
-
-				&:hover {
-					// color: $color-white;
-					fill: $color-green;
-				}
-			}
-		}
-
-		&--artist-name {
-			display: inline-block;
-			color: $color-grey;
-
-			&:hover {
-				color: $color-white;
-				cursor: pointer;
-				text-decoration: underline;
-			}
 		}
 	}
 }
+
 
 .progress-bar {
 	width: 100%;
